secondfile/objects/DHStatus_Ethernet_Tie_Down_Details__c.object
<CustomObject>
    <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details</description>
    <fields>
        <fullName>A_End_Assignment_Control__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; A End Assignment Control</description>
        <label>A End Assignment Control</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Facility_Protection_Transmit__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; A End Facility Protection Transmit</description>
        <label>A End Facility Protection Transmit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Facility_Working_Transmit__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; A End Facility Working Transmit</description>
        <label>A End Facility Working Transmit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_I_Type__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt;A End I Type</description>
        <label>A End I Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_OCN_Fiber_Number__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; A End OCN Fiber Number</description>
        <label>A End OCN Fiber Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Port_Protection_Receive__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details--&gt; A End Port Protection Receive</description>
        <label>A End Port Protection Receive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Port_Protection_Transmit__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; A End Port Protection Transmit</description>
        <label>A End Port Protection Transmit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Port_Working_Receive__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; A End Port Working Receive</description>
        <label>A End Port Working Receive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Port_Working_Transmit__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details--&gt; A End Port Working Transmit</description>
        <label>A End Port Working Transmit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Shelf_Protection_Receive__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; A End Shelf Protection Receive</description>
        <label>A End Shelf Protection Receive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Shelf_Protection_Transmit__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; A End Shelf Protection Transmit</description>
        <label>A End Shelf Protection Transmit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Shelf_Working_Receive__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details--&gt; A End Shelf Working Receive</description>
        <label>A End Shelf Working Receive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Shelf_Working_Transmit__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; A End Shelf Working Transmit</description>
        <label>A End Shelf Working Transmit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Ethernet_Tie_Down_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; DHStatus-Ethernet Tie Down Details</description>
        <label>DHStatus-Ethernet Tie Down Details</label>
        <referenceTo>DHStatus_Ethernet__c</referenceTo>
        <relationshipLabel>DHStatus-Ethernet Tie Down Details</relationshipLabel>
        <relationshipName>DHStatus_Ethernet_Tie_Down_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Z_End_Assignment_Control__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; Z End Assignment Control</description>
        <label>Z End Assignment Control</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_End_Facility_Protection_Transmit__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details--&gt; Z End Facility Protection Transmit</description>
        <label>Z End Facility Protection Transmit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_End_Facility_Working_Transmit__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details--&gt; Z End Facility Working Transmit</description>
        <label>Z End Facility Working Transmit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_End_I_Type__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; Z End I Type</description>
        <label>Z End I Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_End_OCN_Fiber_Number__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; Z End OCN Fiber Number</description>
        <label>Z End OCN Fiber Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_End_Port_Protection_Receive__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; Z End Port Protection Receive</description>
        <label>Z End Port Protection Receive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_End_Port_Protection_Transmit__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details--&gt;Z End Port Protection Transmit</description>
        <label>Z End Port Protection Transmit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_End_Port_Working_Receive__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; Z End Port Working Receive</description>
        <label>Z End Port Working Receive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_End_Port_Working_Transmit__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details--&gt; Z End Port Working Transmit</description>
        <label>Z End Port Working Transmit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_End_Shelf_Protection_Receive__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; Z End Shelf Protection Receive</description>
        <label>Z End Shelf Protection Receive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_End_Shelf_Protection_Transmit__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; Z End Shelf Protection Transmit</description>
        <label>Z End Shelf Protection Transmit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_End_Shelf_Working_Receive__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details---&gt; Z End Shelf Working Receive</description>
        <label>Z End Shelf Working Receive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_End_Shelf_Working_Transmit__c</fullName>
        <description>RDS-Premise---&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; DHStatus-Ethernet Tie Down Details--&gt; Z End Shelf Working Transmit</description>
        <label>Z End Shelf Working Transmit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Ethernet Tie Down Details</label>
    <nameField>
        <label>DHStatus-Ethernet Tie Down Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DHStatus-Ethernet Tie Down Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>